# Rust-Image_library

./: .gitignore  Cargo.toml
src/: enums.rs  lib.rs
src/enums/: compression.rs  crop_edge.rs  format.rs  mod.rs  src.rs  transform_op.rs
src/error/: core.rs  internal.rs  io.rs  mod.rs  validation.rs
src/image/: constants.rs  core.rs  mod.rs
src/image/config/: apply_transformations.rs  base.rs  core.rs  crop.rs  encoding.rs  mod.rs  rotate.rs
src/image/impls/: encoding.rs
src/image/impls/constructors/: from_bytes.rs  from_file.rs  from_reader.rs  from_url.rs
src/image/impls/internal/: apply_transforms.rs  atomic.rs  describe_source.rs  get_decoded.rs  mod.rs
src/image/impls/metadata/: blurhash.rs  color.rs  dominant_color.rs  extension.rs  mod.rs  size.rs  source.rs
src/image/impls/output/: file_name.rs  mod.rs
src/image/impls/saving/: save.rs  save_as.rs  save_to_folder.rs
src/image/impls/serialization/: data_url.rs  save.rs  to_base64.rs  to_data_url.rs  (+2 more)
src/img/: core.rs  mod.rs
src/img/constructors/: download.rs  from_url.rs  mod.rs  open.rs
src/img/conversions/: jpeg.rs  png.rs
src/img/extractors/: color.rs  file_name.rs
src/img/save/: atomic.rs  save.rs  save_to.rs
src/img/traits/: try_from.rs
src/img/transform_pipeline/: apply_transformations.rs  core.rs  crop.rs  mod.rs  rotate.rs
src/img/transformations/: blur.rs  resize.rs
src/models/: size.rs
src/models/image/: core.rs  enums.rs  mod.rs
src/utils/fs/: mod.rs  trash.rs
src/utils/validation/: ensure_image_file.rs  existing_dir.rs  mod.rs
tests/: initialisation.rs
(+105 files in other folders)
